--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body {
-    background-color: antiquewhite;
+    background-color: rgb(125, 122, 117);
     color: white;
+    
 }
 .header {
     background-color: black;
