вынесли в один компонент , добавили стилей

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,19 @@ body {
     background-color: black;
     padding: 20px;
 }
+main {
+    margin: 50px 100px;
+    width: 50%;
+    float: left;
+}
+aside {
+    width: 20%;
+    margin-top: 50px;
+    margin-left: 5%;
+    float: left;
+}
+main .item {
+    margin-bottom: 50px;
+    background-color: rgb(6, 103, 71);
+    padding: 20px;
+}
