--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,3 +28,24 @@ main .item {
     background-color: rgb(6, 103, 71);
     padding: 20px;
 }
+
+
+main .delete-icon {
+    float: right;
+    color: rgb(54, 106, 122);
+    cursor: pointer;
+    transform: scale(2);
+}
+
+main .edit-icon {
+    float: right;
+    margin-right: 25px;
+    color:rgb(40, 72, 82);
+    cursor: pointer;
+    transform: scale(2);
+}
+
+main .delete-icon:hover,
+main .edit-icon:hover {
+    opacity: 0.5;
+}
